# FJNU_OJ_Peeper_Bot

./: .gitignore  README.md  bot.py  config_example.yaml  entry.py  main.py  pyproject.toml  requirements.txt  robot.py
.github/workflows/: codeql.yml
src/core/: command.py  constants.py  exception.py  interact.py  output_cached.py  painter.py  tools.py
src/core/bot/: command.py  interact.py  perm.py
src/core/util/: output_cached.py
src/lib/: cf_rating_calc.py
src/module/: __init__.py  atc.py  cf.py  color_rand.py  contest_manual.py  how_to_cook.py  message.py  nk.py  peeper.py  pick_one.py  rand.py  uptime.py
src/modules/: __init__.py  atc.py  cf.py  color_rand.py  hitokoto.py  message.py  nk.py  peeper.py  pick_one.py  rand.py  uptime.py
src/platform/: model.py
src/platform/collect/: clist.py
src/platform/cp/: atcoder.py  codeforces.py  nowcoder.py
src/platform/it/: clist.py
src/platform/manual/: manual.py
src/platform/online/: atcoder.py  codeforces.py  nowcoder.py
src/plugins/: atcoder.py  codeforces.py  cron.py  nowcoder.py  pick_color.py  simple_response.py
src/plugins/competitive_programming/: __init__.py  atcoder.py  codeforces.py  nowcoder.py
src/plugins/entertainment/: __init__.py  pick_color.py
src/render/: model.py  render_color_card.py  render_contest_list.py  render_user_card.py
src/render/html/: css.py  (+2 more)
unittest/: module.py  test_creep.py  test_module.py  test_platform.py  test_qrcode.py  test_render.py
utils/: cf.py  command.py  hitokoto.py  interact.py  oj_lib.py  peeper.py  pick_one.py  rand.py  tools.py  uptime.py
(+7 files in other folders)
