[project]
name = "cp-helper"
version = "0.1.0"
description = "cp-helper"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_session", "nonebot_plugin_saa", "nonebot_plugin_localstore"]
plugin_dirs = ["src/plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
